--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "e2e": "ng e2e",
     "build:lib": "ng build ng-demo-lib",
     "compodoc": "./node_modules/.bin/compodoc -p src/tsconfig.app.json -n 'My lib_doc'",
-    "compodoc:s": "./node_modules/.bin/compodoc -p src/tsconfig.app.json -n 'My lib_doc' --theme material -s -o"
+    "compodoc:s": "./node_modules/.bin/compodoc -p src/tsconfig.app.json -n 'My lib_doc' --theme material -s -o",
+    "extract": "ngx-translate-extract --input ./src/app --output ./src/assets/i18n/zh-cn.json ./src/assets/i18n/en.json --clean --sort --format-indentation ' '"
   },
   "husky": {
     "hooks": {
@@ -27,6 +28,8 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
@@ -38,6 +41,7 @@
     "@angular/cli": "~7.1.4",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
+    "@biesbjerg/ngx-translate-extract": "^2.3.4",
     "@commitlint/cli": "^7.6.1",
     "@commitlint/config-conventional": "^7.6.0",
     "@compodoc/compodoc": "^1.1.9",
